--- a/packet-capture/Cargo.toml
+++ b/packet-capture/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-pnet = "0.28.0"
+pnet = "*"
+pnet_macros_support = "*"
+pnet_macros = "*"
